@@ -1,12 +1,16 @@
 package org.phong.zenflow.plugin.subdomain.registry;
 
-import com.fasterxml.jackson.core.type.TypeReference;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.json.JSONObject;
 import org.phong.zenflow.plugin.infrastructure.persistence.entity.Plugin;
 import org.phong.zenflow.plugin.infrastructure.persistence.repository.PluginRepository;
+import org.phong.zenflow.plugin.subdomain.registry.profile.PluginProfileDescriptorDelegate;
+import org.phong.zenflow.plugin.subdomain.registry.profile.PluginProfileDescriptorRegistry;
+import org.phong.zenflow.plugin.subdomain.registry.settings.PluginSettingDescriptorDelegate;
+import org.phong.zenflow.plugin.subdomain.registry.settings.PluginSettingDescriptorRegistry;
+import org.phong.zenflow.plugin.subdomain.registry.settings.RegisteredPluginSettingDescriptor;
+import org.phong.zenflow.plugin.subdomain.registry.profile.RegisteredPluginProfileDescriptor;
 import org.phong.zenflow.plugin.subdomain.schema.registry.SchemaIndexRegistry;
 import org.phong.zenflow.plugin.subdomain.schema.services.SchemaValidator;
 import org.springframework.boot.ApplicationArguments;
@@ -16,11 +20,8 @@ import org.springframework.core.annotation.Order;
 import org.springframework.core.type.filter.AnnotationTypeFilter;
 import org.springframework.stereotype.Component;
 
-import java.io.InputStream;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Arrays;
+import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 
@@ -35,13 +36,17 @@ import java.util.UUID;
 @Slf4j
 @Order(10) // Run before PluginNodeSynchronizer (order 20)
 public class PluginSynchronizer implements ApplicationRunner {
-    private final static String BUILTIN_SCHEMA_PREFIX = "builtin:";
-    private final static String BASE_SCHEMA_NAME = "base_plugin_schema_definition";
+    private static final String BUILTIN_SCHEMA_PREFIX = "builtin:";
+    private static final String BASE_SCHEMA_NAME = "base_plugin_schema_definition";
 
     private final PluginRepository pluginRepository;
-    private final ObjectMapper objectMapper;
     private final SchemaValidator schemaValidator;
     private final SchemaIndexRegistry schemaIndexRegistry;
+    private final PluginProfileDescriptorDelegate descriptorDelegate;
+    private final PluginProfileDescriptorRegistry profileDescriptorRegistry;
+    private final PluginSettingDescriptorDelegate settingDescriptorDelegate;
+    private final PluginSettingDescriptorRegistry settingDescriptorRegistry;
+    private final PluginSchemaComposer pluginSchemaComposer;
 
     @Override
     public void run(ApplicationArguments args) {
@@ -58,8 +63,7 @@ public class PluginSynchronizer implements ApplicationRunner {
         try {
             Class<?> clazz = Class.forName(className);
             org.phong.zenflow.plugin.subdomain.registry.Plugin annotation =
-                    clazz.getAnnotation(
-                            org.phong.zenflow.plugin.subdomain.registry.Plugin.class);
+                    clazz.getAnnotation(org.phong.zenflow.plugin.subdomain.registry.Plugin.class);
             if (annotation == null) {
                 return;
             }
@@ -77,95 +81,95 @@ public class PluginSynchronizer implements ApplicationRunner {
             entity.setRegistryUrl(annotation.registryUrl().isEmpty() ? null : annotation.registryUrl());
             entity.setVerified(annotation.verified());
             entity.setPublisherId(UUID.fromString(annotation.publisherId()));
-            String schemaPath = annotation.schemaPath().trim();
 
-            Map<String, Object> pluginSchema = schemaPath.isEmpty()
-                    ? null
-                    : loadSchema(clazz, schemaPath);
-            if (pluginSchema != null && !schemaValidator.validate(
-                    BUILTIN_SCHEMA_PREFIX + BASE_SCHEMA_NAME, new JSONObject(pluginSchema)
-            )) {
-                throw new IllegalStateException("Invalid plugin schema for " + className);
+            List<RegisteredPluginProfileDescriptor> profileDescriptors =
+                    descriptorDelegate.resolveDescriptors(clazz, annotation);
+            List<RegisteredPluginSettingDescriptor> settingDescriptors =
+                    settingDescriptorDelegate.resolveDescriptors(clazz);
+            Map<String, Object> pluginSchema =
+                    pluginSchemaComposer.compose(clazz, annotation, profileDescriptors, settingDescriptors);
+
+            if (!pluginSchema.isEmpty()) {
+                if (!schemaValidator.validate(
+                        BUILTIN_SCHEMA_PREFIX + BASE_SCHEMA_NAME, new JSONObject(pluginSchema))) {
+                    throw new IllegalStateException("Invalid plugin schema for " + className);
+                }
+                entity.setPluginSchema(pluginSchema);
+            } else {
+                entity.setPluginSchema(null);
             }
-
-            entity.setPluginSchema(pluginSchema);
 
             Plugin savedEntity = pluginRepository.save(entity);
             log.info("Synchronized plugin: {} v{}", annotation.key(), annotation.version());
 
-            indexSchema(savedEntity, clazz, schemaPath);
+            profileDescriptorRegistry.register(savedEntity.getId(), savedEntity.getKey(), profileDescriptors);
+            settingDescriptorRegistry.register(savedEntity.getId(), savedEntity.getKey(), settingDescriptors);
+            indexSchema(savedEntity, clazz, annotation.schemaPath(), profileDescriptors, settingDescriptors);
 
         } catch (Exception e) {
             log.error("Failed to synchronize plugin for class {}", className, e);
         }
     }
 
-    private void indexSchema(Plugin plugin, Class<?> clazz, String schemaPath) {
-        if (schemaPath == null || schemaPath.trim().isEmpty()) {
-            return; // Nothing to index
-        }
-        if (plugin.getId() == null) {
-            log.warn("Cannot index schema for plugin {} because it has no ID.", plugin.getKey());
+    private void indexSchema(Plugin plugin, Class<?> clazz, String schemaPath, List<RegisteredPluginProfileDescriptor> profileDescriptors, List<RegisteredPluginSettingDescriptor> settingDescriptors) {
+        UUID pluginId = plugin.getId();
+        String indexKey = pluginId != null ? pluginId.toString() : plugin.getKey();
+
+        if (indexKey == null || indexKey.isBlank()) {
+            log.warn("Cannot index schema for plugin {} because it lacks an identifier.", plugin.getKey());
             return;
         }
 
-        try {
-            String pluginId = plugin.getId().toString();
+        if (schemaPath != null && !schemaPath.trim().isEmpty()) {
             SchemaIndexRegistry.SchemaLocation location =
                     new SchemaIndexRegistry.SchemaLocation(clazz, schemaPath.trim());
-
-            if (schemaIndexRegistry.addSchemaLocation(pluginId, location)) {
-                log.debug("Indexed schema location for plugin ID {}", pluginId);
-            }
-        } catch (Exception e) {
-            log.error("Failed to index schema for plugin class {}: {}", clazz.getName(), e.getMessage());
-        }
-    }
-
-    private Map<String, Object> loadSchema(Class<?> clazz, String customPath) {
-        String resourcePath = extractPath(clazz, customPath);
-        String classpathResource = "/" + resourcePath;
-
-        InputStream classpathStream = clazz.getResourceAsStream(classpathResource);
-        if (classpathStream != null) {
-            try (InputStream is = classpathStream) {
-                Map<String, Object> schema = objectMapper.readValue(is, new TypeReference<>() {});
-                return schema.isEmpty() ? null : schema;
-            } catch (Exception e) {
-                throw new IllegalStateException("Failed to load plugin schema from classpath for " + clazz.getName(), e);
+            if (schemaIndexRegistry.addSchemaLocation(indexKey, location)) {
+                log.debug("Indexed base plugin schema for {}", indexKey);
             }
         }
 
-        Path filePath = Paths.get(resourcePath);
-        if (Files.exists(filePath)) {
-            try (InputStream is = Files.newInputStream(filePath)) {
-                Map<String, Object> schema = objectMapper.readValue(is, new TypeReference<>() {});
-                return schema.isEmpty() ? null : schema;
-            } catch (Exception e) {
-                throw new IllegalStateException("Failed to load plugin schema from filesystem for " + clazz.getName(), e);
-            }
+        if (profileDescriptors != null && !profileDescriptors.isEmpty()) {
+            profileDescriptors.stream()
+                .filter(registered -> registered != null && registered.descriptor() != null)
+                .forEach(registered -> {
+                    String descriptorSchemaPath = registered.descriptor().schemaPath();
+                    if (descriptorSchemaPath == null || descriptorSchemaPath.isBlank()) {
+                        return;
+                    }
+                    SchemaIndexRegistry.SchemaLocation location =
+                            new SchemaIndexRegistry.SchemaLocation(clazz, descriptorSchemaPath.trim());
+                    boolean added;
+                    if (pluginId != null) {
+                        added = schemaIndexRegistry.addProfileSchemaLocation(pluginId, registered.descriptor().id(), location);
+                    } else {
+                        added = schemaIndexRegistry.addProfileSchemaLocation(indexKey, registered.descriptor().id(), location);
+                    }
+                    if (added) {
+                        log.debug("Indexed profile descriptor schema for plugin {} descriptor {}", indexKey, registered.descriptor().id());
+                    }
+                });
         }
 
-        log.warn("No plugin schema found for {} at {}", clazz.getName(), resourcePath);
-        return null;
-    }
-
-    private String extractPath(Class<?> clazz, String customPath) {
-        Path basePath = Paths.get(clazz.getPackageName().replace('.', '/'));
-
-        Path resultPath;
-        if (customPath.isEmpty()) {
-            resultPath = basePath.resolve("plugin.schema.json");
-        } else if (customPath.startsWith("/")) {
-            resultPath = basePath.resolve(customPath.substring(1));
-        } else if (customPath.startsWith("./")) {
-            resultPath = basePath.resolve(customPath.substring(2));
-        } else if (customPath.startsWith("../")) {
-            resultPath = basePath.resolve(customPath).normalize();
-        } else {
-            resultPath = basePath.resolve(customPath);
+        if (settingDescriptors != null && !settingDescriptors.isEmpty()) {
+            settingDescriptors.stream()
+                    .filter(registered -> registered != null && registered.descriptor() != null)
+                    .forEach(registered -> {
+                        String descriptorSchemaPath = registered.descriptor().schemaPath();
+                        if (descriptorSchemaPath == null || descriptorSchemaPath.isBlank()) {
+                            return;
+                        }
+                        SchemaIndexRegistry.SchemaLocation location =
+                                new SchemaIndexRegistry.SchemaLocation(clazz, descriptorSchemaPath.trim());
+                        boolean added;
+                        if (pluginId != null) {
+                            added = schemaIndexRegistry.addSettingSchemaLocation(pluginId, registered.descriptor().id(), location);
+                        } else {
+                            added = schemaIndexRegistry.addSettingSchemaLocation(indexKey, registered.descriptor().id(), location);
+                        }
+                        if (added) {
+                            log.debug("Indexed setting descriptor schema for plugin {} descriptor {}", indexKey, registered.descriptor().id());
+                        }
+                    });
         }
-
-        return resultPath.toString().replace("\\", "/");
     }
 }
